<resources>
    <string name="app_name_text"> Team Zero Chat </string>
    <string name="welcome_title_text"> Welcome to Team Zero Mobile App! </string>
    <string name="enter_username_text"> Username </string>
    <string name="enter_password_text"> Password </string>
    <string name="confirm_password_text"> Confirm Password </string>
    <string name="email_text"> E-Mail Address </string>
    <string name="confirm_email_text"> Confirm E-Mail Address </string>
    <string name="keep_me_signed_in_text"> Keep me signed in </string>
    <string name="login_text"> Login </string>
    <string name="register_text"> Register </string>
    <string name="click_to_register_text"> Not a user yet? Click below to register </string>
    <string name="invalid_username_text"> Invalid username!\nPlease make sure it contains only:\n\n1) Letters (lowercase and uppercase)\n2) Numbers\n3) Characters \'-\', \'.\' or \'_\' </string>
    <string name="invalid_password_text"> Invalid password!\nPlease make sure:\n\n1) Password contains at least 1 uppercase character\n2) Password contains at least 1 lowercase character\n3) Password contains at least 1 digit\n4) Password contains at least 1 special character\n5) Password is between 6 and 30 characters </string>
    <string name="invalid_confirmed_password_text"> Confirmed password is not identical!\nPlease try again! </string>
    <string name="invalid_email_text"> Invalid email format!\nPlease type in your email again </string>
    <string name="invalid_confirmed_email_text"> Confirmed email is not identical!\nPlease type in your email again! </string>
    <string name="registration_text"> Please fill the information below correctly </string>
    <string name="login_failed_text"> Invalid Username / Password </string>
    <string name="registration_success_login_fail_text"> Registration successful but login failed\n\nPlease try again! </string>
    <string name="registration_unsuccessful_text"> Registration unsuccessful!\n\nPlease try again with other credentials! </string>
    <string name="no_chats_found_text"> No chats open so far! </string>
    <string name="search_text"> Search chat </string>
    <string name="send_msg_text"> SEND </string>
    <string name="message_box_hint_text"> Type your message </string>
    <string name="search_users_hint_text"> Search for specific user… </string>
    <string name="search_users_suggestive_text"> Type in the box down below to search for a user to chat with\n\nTo display a full list of users from this chat app, just search without any text </string>
    <string name="fetching_from_server_error_text"> Error fetching data from server. Please try again! </string>
    <string name="search_all_contacts_not_found_text"> No contacts found on our database.\nPlease try again! </string>
    <string name="search_contact_not_found_text"> No contact found with the requested name.\nPlease try another name! </string>
    <string name="settings_menu_text"> Settings </string>
    <string name="sign_out_text"> Sign Out </string>
    <string name="unregister_text"> Unregister </string>
    <string name="profile_picture_text"> Profile picture </string>
    <string name="delete_all_chats_text"> Delete all chats </string>
    <string name="hide_chat_history_text"> Hide Chat History </string>
</resources>
