<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_text"
        android:icon="@drawable/ic_search_icon"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/profile_picture"
        android:title="@string/profile_picture_text"
        android:icon="@drawable/ic_user_default_avatar"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item android:id="@+id/settings"
        android:title="@string/settings_menu_text" >
        <menu>
            <item android:id="@+id/hide_chat_history"
                android:title="@string/hide_chat_history_text" />
            <item android:id="@+id/unregister"
            android:title="@string/unregister_text" />
            <item android:id="@+id/delete_all_chats"
                android:title="@string/delete_all_chats_text" />
        </menu>
    </item>
    <item android:id="@+id/sign_out"
        android:title="@string/sign_out_text" />
</menu>